# RAG-legal-assitant

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yaml
.turbo/cache/: 0476558e0d3fd5ff-meta.json  0476558e0d3fd5ff.tar.zst  (+26 more)
apps/backend/: Procfile.dev  package.json  pyproject.toml  pyrightconfig.json
apps/backend/core/: admin.py  admin_views.py  agents.py  apps.py  asgi.py  consumers.py  llm_responses.py  middleware.py  models.py  qdrant.py  routers.py  routing.py  schemas.py  serializers.py  services.py  settings.py  signals.py  tasks.py  urls.py  views.py
apps/backend/core/migrations/: 0001_initial.py  0002_alter_chatmessage_role.py  0002_documentrefered.py  0003_user_details.py  0004_otp.py  0005_alter_user_city_alter_user_occupation_and_more.py  0006_remove_document_file_path_document_file.py
apps/backend/core/templates/admin/: monitor_activity.html
apps/backend/core/templates/core/email/: otp_email.html
apps/backend/qdrant_storage/: raft_state.json
apps/backend/qdrant_storage/collections/legal_documents/0/: newest_clocks.json  replica_state.json
apps/backend/qdrant_storage/collections/legal_documents/0/segments/1ac95426-d2bc-4164-8a65-87766fa7d97b/: mutable_id_tracker.mappings  mutable_id_tracker.versions
apps/backend/qdrant_storage/collections/legal_documents/0/segments/4138bb37-3c05-4b18-8488-3f0f26ab1078/: mutable_id_tracker.mappings  mutable_id_tracker.versions
apps/backend/qdrant_storage/collections/legal_documents/0/segments/589e289d-0e27-4c66-b934-a2bddad18340/: mutable_id_tracker.mappings  mutable_id_tracker.versions
apps/backend/qdrant_storage/collections/legal_documents/0/segments/9127fa4d-4ee1-4ff9-831f-c39a47532a09/: mutable_id_tracker.mappings  mutable_id_tracker.versions
apps/backend/qdrant_storage/collections/legal_documents/0/segments/93b44567-182d-48b8-8a76-ee04196aa304/: mutable_id_tracker.mappings  mutable_id_tracker.versions
(+39 files in other folders)
