[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "django-mongodb-backend>=6.0.2",
    "django-unfold>=0.83.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
]
