[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-mongodb-backend>=6.0.2",
    "django-pydantic-field>=0.5.4",
    "django-unfold>=0.83.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "drf-spectacular-sidecar>=2026.3.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "uuid6>=2025.0.1",
]
